--- a/app/src/main/res/drawable/favourite_mark.xml
+++ b/app/src/main/res/drawable/favourite_mark.xml
@@ -1,8 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_activated="true" android:drawable="@drawable/favourite"/>
-    <item android:state_enabled="false">
-        <bitmap android:alpha="0.25" android:src="@drawable/non_favourite_disabled"/>
+    <item android:state_activated="true">
+        <vector android:width="48dp"
+            android:height="48dp"
+            android:viewportWidth="960"
+            android:viewportHeight="960"
+            android:tint="?attr/colorControlNormal">
+            <path
+                android:fillColor="@android:color/white"
+                android:pathData="M850,265L610,265L610,205L850,205L850,265ZM200,840L200,175Q200,151 218,133Q236,115 260,115L596,115Q573,141 561.5,170.5Q550,200 550,235Q550,302 593,352Q636,402 700,413Q717,415 730,415Q743,415 760,413L760,840L480,720L200,840Z"/>
+        </vector>
     </item>
-    <item android:drawable="@drawable/non_favourite"/>
+    <item>
+        <vector android:width="48dp"
+            android:height="48dp"
+            android:viewportWidth="960"
+            android:viewportHeight="960"
+            android:tint="?attr/colorControlNormal">
+            <path
+                android:fillColor="@android:color/white"
+                android:pathData="M200,840L200,175Q200,151 218,133Q236,115 260,115L700,115Q724,115 742,133Q760,151 760,175L760,840L480,720L200,840ZM260,749L480,656L700,749L700,175Q700,175 700,175Q700,175 700,175L260,175Q260,175 260,175Q260,175 260,175L260,749ZM260,175L260,175Q260,175 260,175Q260,175 260,175L700,175Q700,175 700,175Q700,175 700,175L700,175L480,175L260,175Z"/>
+        </vector>
+    </item>
 </selector>
