--- a/app/src/main/res/drawable/open.xml
+++ b/app/src/main/res/drawable/open.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="false">
-        <bitmap android:alpha="0.25" android:src="@drawable/open_disabled"/>
-    </item>
-    <item android:drawable="@drawable/open_enabled"/>
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="48dp"
+    android:height="48dp"
+    android:viewportWidth="960"
+    android:viewportHeight="960"
+    android:tint="?attr/colorControlNormal">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M220,880Q196,880 178,862Q160,844 160,820L160,140Q160,116 178,98Q196,80 220,80L560,80L800,320L800,590L740,590L740,360L520,360L520,140L220,140Q220,140 220,140Q220,140 220,140L220,820Q220,820 220,820Q220,820 220,820L630,820L630,880L220,880ZM878,881L750,753L750,878L690,878L690,650L918,650L918,710L792,710L920,838L878,881ZM220,820L220,590L220,590L220,360L220,140L220,140Q220,140 220,140Q220,140 220,140L220,820Q220,820 220,820Q220,820 220,820L220,820Z"/>
+</vector>
