--- a/app/src/main/res/layout/activity_track_properties.xml
+++ b/app/src/main/res/layout/activity_track_properties.xml
@@ -21,14 +21,30 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <android.widget.Button
+            android:id="@+id/createCustomButton"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_margin="5dp"
+            android:textSize="16sp"
+            android:background="@drawable/instrument_button"
+            android:foreground="@drawable/create"
+            android:foregroundTintMode="src_atop"
+            android:foregroundGravity="left"
+            android:text="@string/create_custom"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/categories" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/instrumentsList"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/categories"
+            app:layout_constraintTop_toBottomOf="@+id/createCustomButton"
             tools:listitem="@layout/instrument" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
