--- a/app/src/main/res/layout/activity_track_properties.xml
+++ b/app/src/main/res/layout/activity_track_properties.xml
@@ -27,7 +27,7 @@
             android:layout_height="48dp"
             android:layout_margin="5dp"
             android:textSize="16sp"
-            android:background="@drawable/instrument_button"
+            android:background="@drawable/selectable_button"
             android:foreground="@drawable/create"
             android:foregroundTintMode="src_atop"
             android:foregroundGravity="left"
@@ -194,7 +194,7 @@
             </TableRow>
         </TableLayout>
 
-        <!--<androidx.recyclerview.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/oscillators"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -202,7 +202,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tableLayout"
             app:layout_constraintTop_toBottomOf="@+id/tableLayout"
-            tools:listitem="@layout/oscillator"/>-->
+            tools:listitem="@layout/oscillator"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
