--- a/app/src/main/res/layout/instrument.xml
+++ b/app/src/main/res/layout/instrument.xml
@@ -6,7 +6,5 @@
     android:layout_height="48dp"
     android:layout_margin="5dp"
     android:textSize="16sp"
-    android:background="@drawable/instrument_button"
-    tools:ignore="ContentDescription,SpeakableTextPresentCheck">
-
-</android.widget.Button>
+    android:background="@drawable/selectable_button"
+    tools:ignore="ContentDescription,SpeakableTextPresentCheck"/>
