--- a/app/src/main/res/layout/oscillator.xml
+++ b/app/src/main/res/layout/oscillator.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="80dp">
 
     <androidx.appcompat.widget.SwitchCompat
@@ -89,4 +89,63 @@
         android:src="@drawable/increase"
         android:background="@color/translucent"
         tools:ignore="ContentDescription" />
+
+    <ImageButton
+        android:id="@+id/voicesDownButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="5dp"
+        android:layout_gravity="center"
+        android:src="@drawable/decrease"
+        android:background="@color/translucent"
+        tools:ignore="ContentDescription" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/voicesText"
+            android:layout_width="48dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center"
+            android:textSize="28sp"
+            android:gravity="center" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            android:textSize="16sp"
+            android:gravity="clip_vertical"
+            android:text="@string/voices" />
+
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/voicesUpButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="10dp"
+        android:layout_gravity="center"
+        android:src="@drawable/increase"
+        android:background="@color/translucent"
+        tools:ignore="ContentDescription" />
+
+    <com.sdsmdg.harjot.crollerTest.Croller
+        android:id="@+id/detuneSlider"
+        app:enabled="false"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginVertical="10dp"
+        android:layout_marginEnd="10dp"
+        android:foregroundGravity="clip_horizontal"
+        app:label="@string/detune"
+        app:min="0"
+        app:max="100"
+        app:is_continuous="true"
+        app:progress_primary_stroke_width="10" />
 </LinearLayout>
